<resources>
    <string name="app_name">Etiquette</string>
    <string name="welcome_back">Welcome_Back!</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Log In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_to_your_account">Log In to your Account</string>
</resources>